--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,10 @@ services:
       - "-c"
       - "wal_level=logical"
     volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - ${DATA_DIR:-./data}/db:/var/lib/postgresql/data
 
   setup-postgres:
     image: postgres:14-alpine
-    restart: always
     entrypoint: ["psql", "-f", "/migration.sql"]
     environment:
       PGHOST: "postgres"
@@ -40,10 +39,12 @@ services:
       dockerfile: docker/Dockerfile
     restart: always
     environment:
+      DB_PATH:
       WEB3_PROVIDER_URI:
       SEQUENCER_ADDRESS:
+      ERPC_ADDRESS:
     volumes:
-      - ${DATA_DIR:-.}/data/app:/data
+      - ${DATA_DIR:-./data}/app:/data
     depends_on:
       setup-postgres:
         condition: service_completed_successfully
@@ -61,6 +62,7 @@ services:
       - "443:443"
       - "443:443/udp"
     volumes:
-      - ${DATA_DIR:-.}/data/caddy:/data
+      - ${DATA_DIR:-./data}/caddy:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     labels:
       caddy.email: "devops@brainbot.com"
